layout issues fixes for rich-img-text-block

--- a/web/themes/custom/securance/scss/components/_rich-image-text-component.scss
+++ b/web/themes/custom/securance/scss/components/_rich-image-text-component.scss
@@ -175,9 +175,6 @@
   &.image-position-bottom {
     .component-image {
       text-align: center;
-      img {
-        width: max-content;
-      }
     }
     .component-content {
       .component-title {
